packages/svelte/tests/compiler-errors/samples/effect-active-rune/main.svelte.js
export const x = (() => {
	return $effect.active();
})()
